--- a/react_node_backend/public/index.html
+++ b/react_node_backend/public/index.html
@@ -5,7 +5,7 @@
      <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <title>Freelancer</title>
+    <title>Fandango</title>
   </head>
   <body>
       
