--- a/react_node_backend/public/index.html
+++ b/react_node_backend/public/index.html
@@ -7,13 +7,12 @@
     <script type="text/javascript" src="https://fonts.fandango.com/kpn3yzj.js"></script>
     <script type="text/javascript" src="https://images.fandango.com/fandango-www/screenplay/assets/javascripts/bundles/vendor.bbe7b3a7d8d.js"></script>
 
-    <!-- <script type="text/javascript" src="https://images.fandango.com/fandango-www/screenplay/assets/javascripts/templates/shell.425f0d80d1b.js"></script>
-    <script type="text/javascript" src="https://images.fandango.com/fandango-www/screenplay/assets/javascripts/bundles/global.918f790e8c9.js"></script>
-    <script type="text/javascript" src="https://images.fandango.com/fandango-www/screenplay/assets/javascripts/bundles/desktop-home.d361c35f7d9.js"></script> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+    <link rel="stylesheet" href="//images.fandango.com/fandango-www/screenplay/assets/stylesheets/bundles/global.d7904bba51a.css">
+    <link rel="stylesheet" href="//images.fandango.com/fandango-www/screenplay/assets/stylesheets/bundles/theater-theaterShowtimesPage.ed9ebad4344.css">
 
      <script type="text/javascript" src="https://assets.adobedtm.com/a5fa26c3da5356c4d77ae8244dc4eb5096e2f4b0/satelliteLib-230299c41ceebfede71508fa3219cd319c8b9266.js"></script>
      <script type="text/javascript" src="https://ds-aksb-a.akamaihd.net/aksb.min.js"></script>
