Adding design for booking number of tickets

--- a/react_node_backend/public/index.html
+++ b/react_node_backend/public/index.html
@@ -14,10 +14,19 @@
     <link rel="stylesheet" href="//images.fandango.com/fandango-www/screenplay/assets/stylesheets/bundles/global.d7904bba51a.css">
     <link rel="stylesheet" href="//images.fandango.com/fandango-www/screenplay/assets/stylesheets/bundles/theater-theaterShowtimesPage.ed9ebad4344.css">
 
-     <script type="text/javascript" src="https://assets.adobedtm.com/a5fa26c3da5356c4d77ae8244dc4eb5096e2f4b0/satelliteLib-230299c41ceebfede71508fa3219cd319c8b9266.js"></script>
-     <script type="text/javascript" src="https://ds-aksb-a.akamaihd.net/aksb.min.js"></script>
-     <link rel="stylesheet" href="https://images.fandango.com/fandango-www/screenplay/assets/stylesheets/bundles/global.173b425e612.css">
-     <link rel="stylesheet" href="https://images.fandango.com/fandango-www/screenplay/assets/stylesheets/bundles/desktop-home.c5f8c7bb516.css">
+    <script type="text/javascript" src="https://assets.adobedtm.com/a5fa26c3da5356c4d77ae8244dc4eb5096e2f4b0/satelliteLib-230299c41ceebfede71508fa3219cd319c8b9266.js"></script>
+    <script type="text/javascript" src="https://ds-aksb-a.akamaihd.net/aksb.min.js"></script>
+    <link rel="stylesheet" href="https://images.fandango.com/fandango-www/screenplay/assets/stylesheets/bundles/global.173b425e612.css">
+    <link rel="stylesheet" href="https://images.fandango.com/fandango-www/screenplay/assets/stylesheets/bundles/desktop-home.c5f8c7bb516.css">
+
+    <link rel="stylesheet" type="text/css" href="https://images.fandango.com/r1.0.589/styles/commerce/redesign/foundation.css"/>
+    <link rel="stylesheet" type="text/css" href="https://images.fandango.com/r1.0.589/styles/commerce/redesign/base.css"/>
+    <link rel="stylesheet" type="text/css" href="https://images.fandango.com/r1.0.589/styles/commerce/redesign/layout.css"/>
+    <link rel="stylesheet" type="text/css" href="https://images.fandango.com/r1.0.589/styles/commerce/redesign/buttons.css"/>
+
+
+    <link rel="stylesheet" type="text/css" href="https://images.fandango.com/r1.0.589/styles//commerce/redesign/commerce.css"/>
+
      
     <meta charset="utf-8">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
