Adding profile design change

--- a/react_node_backend/public/index.html
+++ b/react_node_backend/public/index.html
@@ -12,11 +12,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 
-
-
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-
+    <!-- <link rel="stylesheet" href="https://images.fandango.com/r1.0.431/redesign/static/css/global-bundle.min.css"> -->
+    <link rel="stylesheet" href="https://images.fandango.com/r1.0.431/redesign/areas/profile/css/vip.css">
+    <link type="text/css" rel="stylesheet" href="https://images.fandango.com/r1.0.431/redesign/areas/profile/css/vipsettings.css">
 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.2.0/jquery.rateyo.min.css">
